--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "style-dictionary": "style-dictionary build"
@@ -19,11 +20,13 @@
     "eslint-config-next": "13.4.12",
     "mongodb": "^6.0.0",
     "next": "13.4.12",
+    "pptxgenjs": "^3.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@jest/globals": "^29.6.4",
     "@storybook/addon-essentials": "^7.2.3",
     "@storybook/addon-interactions": "^7.2.3",
     "@storybook/addon-links": "^7.2.3",
@@ -33,6 +36,7 @@
     "@storybook/react": "^7.2.3",
     "@storybook/testing-library": "^0.2.0",
     "eslint-plugin-storybook": "^0.6.13",
+    "jest": "^29.6.4",
     "storybook": "^7.2.3",
     "style-dictionary": "^3.8.0"
   }
